# otus

./: CMakeLists.txt  Doxyfile  README.md  controller.cpp  controller.h  main.cpp  model.cpp  model.h  observ.h  sparsematrix.h  test_google.cpp  utils.cpp  utils.h  view.cpp  view.h
.github/workflows/: release.yml  static.yml
